--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs",
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "@redocly/cli": "^1.18.1",
     "eslint": "^9.4.0",
     "globals": "^15.4.0",
     "nodemon": "^3.1.3",
@@ -33,6 +37,7 @@
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
-    "pino-http": "^10.1.0"
+    "pino-http": "^10.1.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
